8217576: C1 atomic access handlers use incorrect decorators

Fix decorator defaulting.

Reviewed-by: tschatzl, eosterlund